[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/prim"
repository = "https://github.com/puniyu/prim"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]

prim_common = { version = "0.1.0", path = "./crates/prim_common" }
skia-safe = { version = "0.93.1" }

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true
