[workspace]
members = ["lumio", "lumio_core", "lumio_help", "lumio_node"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/lumio"
repository = "https://github.com/puniyu/lumio"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
bytes = { version = "1.11.1" }
skia-safe = { version = "0.97.1", package = "puniyu-skia-safe" }


[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true
