[workspace]
members = ["prim", "prim_core", "prim_help", "prim_node"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/prim"
repository = "https://github.com/puniyu/prim"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
prim = { version = "0.1.0", path = "./prim" }
prim_core = { version = "0.1.0", path = "./prim_core" }
prim_help = { version = "0.1.0", path = "./prim_help" }

bytes = { version = "1.11.1" }
skia-safe = { version = "0.97.1", package = "puniyu-skia-safe" }


[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true
