[package]
name = "lumio"
version = "0.1.1"
description = "可复用组件库"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
lumio_core = { version = "0.1.1", path = "../lumio_core" }
lumio_help = { version = "0.1.1", optional = true, path = "../lumio_help" }

[features]
default = []
help = ["dep:lumio_help"]
