[package]
name = "lumio_help"
version = "0.1.2"
description = "帮助页面渲染组件"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true

lumio_core = { version = "0.1.2", path = "../lumio_core" }

[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { workspace = true, features = [
    "embed-freetype",
    "textlayout",
    "svg",
    "webp",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
skia-safe = { workspace = true, features = ["textlayout", "svg", "webp"] }

[dev-dependencies]
skia-safe = { workspace = true, features = ["textlayout", "svg", "webp"] }
