[package]
name = "lumio_layout"
version = "0.1.3"
description = "Flex 布局引擎，将布局逻辑从 lumio_help 中独立出来"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
skia-safe.workspace = true
