[package]
name = "prim"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
prim_core.workspace = true
prim_help = { workspace = true, optional = true }

[features]
default = []
help = ["dep:prim_help"]
