[package]
name = "prim"
version = "0.1.0"
description = "可复用组件库"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
prim_core = { version = "0.1.0", path = "../prim_core" }
prim_help = { version = "0.1.0", optional = true, path = "../prim_help" }

[features]
default = []
help = ["dep:prim_help"]
