[package]
name = "prim_core"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src", "fonts", "Cargo.toml"]

[dependencies]
prim_common.workspace = true
bytes.workspace = true

skia-safe = { workspace = true, features = ["textlayout"] }