[package]
name = "prim_core"
version = "0.1.0"
description = "prim 核心库，提供渲染和字体管理基础能力"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include = ["src", "fonts", "Cargo.toml"]

[dependencies]
bytes.workspace = true

skia-safe = { workspace = true, features = ["textlayout"] }

thiserror = "2.0.18"