[package]
name = "prim_help"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prim_core.workspace = true
bytes.workspace = true


[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { workspace = true, features = ["embed-freetype", "textlayout", "svg", "webp"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
skia-safe = { workspace = true, features = ["textlayout", "svg", "webp"] }
