[package]
name = "prim_node"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
napi = "3.8.6"
napi-derive = "3.5.5"

prim = { workspace = true, features = ["help"] }

[build-dependencies]
napi-build = "2.3.1"
