[package]
name = "prim_node"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.8.6"
napi-derive = "3.5.5"

prim = { version = "0.1.0", path = "../prim", features = ["help"] }
skia-safe.workspace = true

[build-dependencies]
napi-build = "2.3.1"
